Admin Projects/University/force-app/main/default/objects/Subject__c/Subject__c.object-meta.xml
<CustomObject>
    <label>Subject</label>
    <nameField>
        <label>Subject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>