Admin Projects/University/force-app/main/default/objects/Subject__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>