Admin Projects/University/force-app/main/default/objects/Subject__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Subjects</relationshipLabel>
    <relationshipName>Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>