Admin Projects/University/force-app/main/default/objects/Subject__c/fields/No_of_Modules__c.field-meta.xml
<CustomField>
    <fullName>No_of_Modules__c</fullName>
    <description>Enter No. of modules ( Max - 12).</description>
    <label>No. of Modules</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>