Admin Projects/University/force-app/main/default/objects/Subject__c/validationRules/Module_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Module_limit</fullName>
    <active>true</active>
    <errorConditionFormula>OR(No_of_Modules__c &lt;= 0,No_of_Modules__c &gt; 12)</errorConditionFormula>
    <errorDisplayField>No_of_Modules__c</errorDisplayField>
    <errorMessage>The No. of modules should be between 1 to 12.</errorMessage>
</ValidationRule>